<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eye Accessing Cues trainer</string>
	
    <string name="action_settings">Settings</string>
	<string name="action_about">About</string>
	<string name="action_help">Help</string>
	<string name="action_help_ok">Help? Ok!</string>
	<string name="action_results">Results</string>			
	<string name="action_speed">Speed</string>			
	<string name="action_exit">Exit</string>			
	<string name="action_move">Move and resize</string>			
	<string name="action_record">Record</string>			
	<string name="action_play">Play</string>
	<string name="action_submenu">Submenu</string>
		

	<string name="action_list">List of subtitles</string>
	<string name="save_titles">Save subtitles</string>
	<string name="load_titles">Load subtitles</string>
	<string name="warning_void_titles">List of subtitles is void</string>
	
	
	<string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit app</string>
    <string name="question_exit">Exit app. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cont">Continue</string>
    <string name="reset">Reset</string>
    
    <string name="results">Results</string>
    
	<string name="about"><![CDATA[Author of app: <b>Alexey Mochalov</b> (<a  href=\"mailto:maaventrade@gmail.com\">maaventrade@gmail.com</a>) <p>
	    					Author of idea: livejournal user <b>Metanymous</b> (<a  href=\"http://metapractice.livejournal.com\">metapractice.livejournal.com</a>) <p>
	    					<b>2016<b>]]></string>
	    					
	<string name="resultstr">Your result is</string>
	<string name="noresult">Do something to get a result.</string>

	<string name="none">No</string>
	<string name="vibration">Vibration</string>
	<string name="bg_color">Background color</string>
	
	
	<string name="info"><![CDATA[This application is designed to train to the observation of the <b>Eye Accessing Cues</b>. 
The importance of monitoring the movement of the eyes was discribed in the  Neuro-Linguistic Programming. You can read about NLP and Eye Accessing Cues from the <a  href=\"http://www.google.ru/webhp?q=Eye+Accessing+Cues#newwindow=1&q=Eye+Accessing+Cues\">Internet</a>.<p>
<b><font color = red>How does it work:</b></font> the application paints the face and buttons, marked with the names of <b>Eye Accessing Cues</b>. 
After touching the screen (anywhere) eyes of this face begin to move. If you have time to touch on the button appropriate to the direction of movement before the direction changed, the touching counted.
When you touch anywhere on the screen except the buttons, the movement stops and appears the button <b>Result</b>. By pressing it, you can see the percentage of correct clicks.<p>
The <b>volume control</b> sets the speed of the movement.
]]></string>
	
	<string name="signal_for_correct_answer">Signal for the correct answer</string>
	<string name="extended_set">Extended set of directions</string>
	<string name="mode">Mode...</string>	
	<string name="count">Movements count:</string>
	<string name="time_answer">Time to give answer (s.):</string>
	<string name="time_between_groups">Time between groups (s.):</string>
	
	<string name="mode_info_random">Continuous motion</string>
	<string name="mode_info_groups">Sets of movements</string>
	<string name="mode_info_tobuttom">Move to button</string>
	<string name="mode_info_coordinates">Get coordinates</string>
			
	<!-- string name="mode_info_random">Mode: Continuous motion. The eyes are moving randomly. Press the screen buttons in the moving direction while the eyes are moving. The percent of correct actions is showed in the menu Results.</string>
	<string name="mode_info_groups">Mode: Groups. The eyes are moving randomly and stops. Press the screen buttons in the moving directions when the moving of the eyes paused. The percent of correct actions is showed in the menu Results.</string> -->
		
	<string name="face_number">Face picture</string>
		
		
</resources>
