<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alexmochalov.eyeac.MainActivity" >

    <item
        android:id="@+id/action_play"
        android:orderInCategory="199"
        android:showAsAction="always"
        android:title="@string/action_play" 
        android:icon="@drawable/button_play"/>
	
	<item
        android:id="@+id/action_record"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/action_record" 
        android:icon="@drawable/button_rec" 
        />
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="201"
        android:showAsAction="always"
        android:title="@string/action_record" 
        android:icon="@drawable/button_stop_g"/>
	
	<item
        android:id="@+id/action_submenu"
        android:orderInCategory="211"
        android:showAsAction="always"
        android:title="submenu" 
        android:icon="@drawable/submenu">
	<menu>
	    
	<item
        android:id="@+id/action_list"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_list"/>
	    	    
		<item
			android:id="@+id/action_save_titles"
			android:orderInCategory="10"
			android:showAsAction="never"
			android:title="@string/save_titles"
        />
		
		<item
			android:id="@+id/action_load_titles"
			android:orderInCategory="20"
			android:showAsAction="never"
			android:title="@string/load_titles"
        />
	
	</menu>
	</item>

	
	
    	
    <item
        android:id="@+id/action_mode"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/mode"
        />

  
    <item
        android:id="@+id/action_results"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/action_results"/>
    
    <item
        android:id="@+id/action_speed"
        android:orderInCategory="21"
        android:showAsAction="never"
        android:title="@string/action_speed"/>
    
    <item
        android:id="@+id/action_move"
        android:orderInCategory="23"
        android:showAsAction="never"
        android:title="@string/action_move" android:checkable="true"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="25"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/action_help"
        android:icon="@drawable/help"/>
    	

    <item
        android:id="@+id/action_about"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_about"/>
	
    	
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
    
</menu>

