<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/about"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:id="@+id/dialogresultTextView1"/>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<Button
		    android:id="@+id/buttonContinue"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    android:text="@string/cont" />

		<Button
		    android:id="@+id/buttonReset"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    android:text="@string/reset" />

	</LinearLayout>
  
</LinearLayout>

